; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_aio.c_aio_suspend.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_aio.c_aio_suspend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.aio_suspend_args = type { i32 }
%struct.aio_suspend_nocancel_args = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @aio_suspend(i32 %0, %struct.aio_suspend_args* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.aio_suspend_args*, align 8
  %6 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store %struct.aio_suspend_args* %1, %struct.aio_suspend_args** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = call i32 @__pthread_testcancel(i32 1)
  %8 = load i32, i32* %4, align 4
  %9 = load %struct.aio_suspend_args*, %struct.aio_suspend_args** %5, align 8
  %10 = bitcast %struct.aio_suspend_args* %9 to %struct.aio_suspend_nocancel_args*
  %11 = load i32*, i32** %6, align 8
  %12 = call i32 @aio_suspend_nocancel(i32 %8, %struct.aio_suspend_nocancel_args* %10, i32* %11)
  ret i32 %12
}

declare dso_local i32 @__pthread_testcancel(i32) #1

declare dso_local i32 @aio_suspend_nocancel(i32, %struct.aio_suspend_nocancel_args*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
